A few more fixes